--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="card" id="card">
             <!-- Cara delantera -->
             <div class="card-face card-front">
-                ¡Haz clic para ver las flores!
+                Ten tus flores amarillas
             </div>
 
             <!-- Cara trasera con flores -->
