--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="card" id="card">
             <!-- Cara delantera -->
             <div class="card-face card-front">
-                Ten tus flores amarillas
+                Abre la sorpresa
             </div>
 
             <!-- Cara trasera con flores -->
