--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carta con 5 flores</title>
+    <title>Carta</title>
     <style>
         body {
             background-color: black;
@@ -127,7 +127,8 @@
         <div class="card" id="card">
             <!-- Cara delantera -->
             <div class="card-face card-front">
-                Abre la sorpresa
+                Hola, mira tu regalo, espero 
+                que te guste.
             </div>
 
             <!-- Cara trasera con flores -->
