--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         <div class="card" id="card">
             <!-- Cara delantera -->
             <div class="card-face card-front">
-                Hola, mira tu regalo, espero 
-                que te guste.
+                Hola, mira tu regalo 
+                P.D: Espero que te guste.
             </div>
 
             <!-- Cara trasera con flores -->
